# reframe

./: .buildinfo  .dockerignore  .gitignore  .pep8speaks.yml  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  JUMBOTRON.md  Jenkinsfile  JenkinsfileDeploy  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  README_minimal.md  SIDEBAR.md  about.html  ac-reframe.sh  advanced.html  autodetect_config.py  bootstrap.sh  configure.html  cscstests  deferrables.html  generate_recipes.sh  genindex.html  index.html  multiarch.sh  objects.inv  pipeline.html  plot_pipeline_progress.py  py-modindex.html  pyproject.toml  reference.html  reframe.py  requirements.txt  running.html  sanity_functions_reference.html  search.html  (+7 more)
.doctrees/: about.doctree  advanced.doctree  configure.doctree  deferrables.doctree  environment.pickle  index.doctree  pipeline.doctree  reference.doctree  running.doctree  sanity_functions_reference.doctree  started.doctree  tutorial.doctree  usecases.doctree
.github/: dependabot.yml
Dockerfiles/: Lmod.dockerfile  Tmod4.dockerfile
_modules/: index.html
_old/: README.md  index.html
_sources/: about.md.txt  about.rst.txt  advanced.rst.txt  configure.md.txt  configure.rst.txt  deferrables.rst.txt  index.rst.txt  pipeline.rst.txt  running.rst.txt  sanity_functions_reference.rst.txt  started.rst.txt  tutorial.rst.txt  usecases.rst.txt
about/: README.md  index.html
ci-scripts/: ci-runner.bash  deploy.sh  genrelnotes.py  pypi-genreadme.py  tutorials.patch
config/: ci-cluster.py  cscs-ci.py  cscs-kesch.py  cscs-pbs.py  cscs-torque.py  cscs.py  cscs_mch.py  generic.py  lumi.py  tiger.py  tsa76.py
configure/: JUMBOTRON.md  README.md
css/: bootstrap.min.css  fixed-nav-bar-footer.css  prism-dark.css  prism-default.css  prism.css
docs/: Makefile  about.rst  advanced.rst  conf.py  config_reference.rst  configure.rst  deferrable_functions_reference.rst  deferrables.md  deferrables.rst  dependencies.rst  exceptions.rst  howto.rst  hpctestlib.rst  index.rst  link_old_docs.sh  manpage.rst  manuals.rst  migration_2_to_3.rst  pipeline.md  pipeline.rst  polling.rst  programming_apis.rst  reference.rst  regression_test_api.rst  requirements.txt  running.md  running.rst  sanity_functions_reference.rst  started.md  started.rst  topics.rst  tutorial.md  tutorial.rst  tutorial_advanced.rst  tutorial_basic.rst  tutorial_basics.rst  tutorial_build_automation.rst  tutorial_deps.rst  tutorial_easybuild.rst  tutorial_fixtures.rst  (+8 more)
etc/: reframe_completion.bash  reframe_completion.fish
examples/: index.html
html/: base.html  home.html
js/: cscs.js  cscs.min.js  prism.js  reframe.js  reframe.min.js
master/: .buildinfo  about.html  advanced.html  configure.html  deferrables.html  genindex.html  index.html  objects.inv  pipeline.html  py-modindex.html  reference.html  running.html  sanity_functions_reference.html  search.html  searchindex.js  started.html  tutorial.html  usecases.html
news/: 2017.md
pipeline/: JUMBOTRON.md  README.md  index.html
reference/: README.md
reframe/: README.md  __init__.py  index.html  settings-cscs.py  settings-keschTDS.py  settings.py  settings_keschTDS.py
running/: JUMBOTRON.md  README.md  index.html
schemas/: config.json  settings.py
started/: README.md  index.html
structure/: JUMBOTRON.md  README.md  index.html
tools/: convert-config  convert_config.py  gendoclistings.py  plot_poll_rate.py  requirements.txt
tutorial/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py
unittests/: conftest.py  eff.patrun  fixtures.py  test_UES-600.py  test_argparser.py  test_autodetect.py  test_buildsystems.py  test_check_filters.py  test_ci.py  test_cli.py  test_color.py  test_config.py  test_containerplatform.py  test_containers.py  test_core.py  test_deferrable.py  test_dependencies.py  test_directives.py  test_distribute_tests.py  test_dynamic_tests.py  test_environments.py  test_exceptions.py  test_fields.py  test_filters.py  test_fixtures.py  test_junit.py  test_launchers.py  test_lmod_helper.py  test_loader.py  test_logging.py  test_meta.py  test_modules.py  test_parameters.py  test_parsers.py  test_perflogging.py  test_pipeline.py  test_policies.py  test_profiler.py  test_reporting.py  test_runtime.py  (+11 more)
usecases/: README.md  index.html
v2.10/: .buildinfo  about.html  advanced.html  configure.html  deferrables.html  genindex.html  index.html  objects.inv  pipeline.html  py-modindex.html  reference.html  running.html  sanity_functions_reference.html  search.html  started.html  tutorial.html  usecases.html
v2.11/: .buildinfo  about.html  advanced.html  configure.html  deferrables.html  genindex.html  index.html  pipeline.html  py-modindex.html  reference.html  running.html  sanity_functions_reference.html  search.html  started.html  tutorial.html  usecases.html
v2.12/: .buildinfo  about.html  advanced.html  configure.html  deferrables.html  genindex.html  index.html  pipeline.html  py-modindex.html  reference.html  running.html  sanity_functions_reference.html  search.html  started.html  tutorial.html  usecases.html
v2.12-dev0/: .buildinfo  about.html  advanced.html  configure.html  deferrables.html  genindex.html  index.html  objects.inv  pipeline.html  py-modindex.html  reference.html  running.html  sanity_functions_reference.html  search.html  searchindex.js  started.html  tutorial.html  usecases.html
v2.12-dev1/: .buildinfo  about.html  advanced.html  configure.html  deferrables.html  genindex.html  index.html  objects.inv  pipeline.html  py-modindex.html  reference.html  running.html  sanity_functions_reference.html  search.html  searchindex.js  started.html  tutorial.html  usecases.html
v2.7/: .buildinfo  about.html  advanced.html  configure.html  deferrables.html  genindex.html  index.html  objects.inv  pipeline.html  py-modindex.html  reference.html  running.html  sanity_functions_reference.html  search.html  searchindex.js  started.html  tutorial.html  usecases.html
v2.8.1/: .buildinfo  about.html  advanced.html  configure.html  deferrables.html  (+12 more)
(+1482 files in other folders)
