[metadata]
name = ReFrame-HPC
version = attr: reframe.VERSION
author = Swiss National Supercomputing Center (CSCS/ETH Zurich), ReFrame Project Developers
description = ReFrame is a powerful framework for writing system regression tests and benchmarks, specifically targeted to HPC systems
url = https://github.com/reframe-hpc/reframe
license = BSD 3-Clause
long_description = file: README_minimal.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Environment :: Console

[options]
packages = find_namespace:
python_requires = >=3.6
scripts = bin/reframe
install_requires =
    archspec >= 0.2.4
    argcomplete
    argcomplete <= 3.1.2; python_version < '3.8'
    ClusterShell
    fasteners==0.19; python_version < '3.10'
    fasteners
    jinja2==3.0.3; python_version == '3.6'
    jinja2
    jsonschema
    lxml==5.2.0; python_version < '3.8' and platform_machine == 'aarch64'
    lxml==5.4.0; python_version < '3.8' and platform_machine != 'aarch64'
    lxml
    PyYAML==6.0.1; python_version < '3.8'
    PyYAML
    requests
    requests <= 2.27.1; python_version == '3.6'
    semver
    semver <= 2.13.0; python_version == '3.6'
    tabulate
    tabulate <= 0.8.10; python_version == '3.6'

[options.packages.find]
include = reframe,reframe.*,hpctestlib.*

[options.package_data]
reframe = schemas/*

[flake8]
extend-ignore = E129,E221,E226,E241,E402,E272,E741,E742,E743,F821,W504
exclude = .git,__pycache__,docs/conf.py,external
