[metadata]
name = ReFrame-HPC
version = attr: reframe.VERSION
author = Swiss National Supercomputing Center (CSCS/ETH Zurich), ReFrame Project Developers
description = ReFrame is a powerful framework for writing system regression tests and benchmarks, specifically targeted to HPC systems
url = https://github.com/reframe-hpc/reframe
license = BSD 3-Clause
long_description = file: README_minimal.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Environment :: Console

[options]
packages = find_namespace:
python_requires = >=3.9
scripts = bin/reframe
install_requires =
    archspec >= 0.2.4
    argcomplete
    ClusterShell
    fasteners==0.19; python_version < '3.10'
    fasteners
    jinja2
    jsonschema
    lxml
    polars
    PyYAML
    requests
    semver
    tabulate

[options.packages.find]
include = reframe,reframe.*,hpctestlib.*

[options.package_data]
reframe = schemas/*

[flake8]
extend-ignore = E129,E221,E226,E241,E402,E272,E741,E742,E743,F821,W504
exclude = .git,__pycache__,docs/conf.py,external
